--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,11 +13,102 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Houssem Chaouachi's portfolio</title>
 </head>
+
 <body>
-    
+    <!-- header -->
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="" class="nav__logo">Houssem </a>
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list grid">
+                    <li class="nav__item">
+                        <a href="#home" class="nav__link">
+                            <i class="uil uil-estate nav__icon"></i> Home
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#about" class="nav__link">
+                            <i class="uil uil-user nav__icon"></i> About
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#skills" class="nav__link">
+                            <i class="uil uil-file-alt nav__icon"></i> Skills
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#services" class="nav__link">
+                            <i class="uil uil-briefcase-alt nav__icon"></i> Services
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#portfolio" class="nav__link">
+                            <i class="uil uil-scenery nav__icon"></i> Portfolio
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#contact" class="nav__link">
+                            <i class="uil uil-message nav__icon"></i> Contact me
+                        </a>
+                    </li>
+                </ul>
+                <i class="uil uil-times nav__close" id="nav-close"></i>
+            </div>
+            <div class="nav__btns">
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="uil uil-apps"></i>
+                </div>
+
+            </div>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="home section" id="home">
+            <div class="home_container container grid">
+                <div class="home_content grid">
+                    <div class="home_social">
+                        <a href="https://www.linkedin.com/in/houssem-chaouachi-694874171/" target="_blank"
+                            class="home_social-icon">
+                            <i class="uil uil-linkedin-alt"></i>
+                        </a>
+                        <a href="https://github.com/Houssem-Chaouachi" target="_blank" class="home_social-icon">
+                            <i class="uil uil-github-alt"></i>
+                        </a>
+                    </div>
+                    <div class="home_img">
+                        <?xml version="1.0" standalone="no"?>
+                        <svg class="home__blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                            <path fill="#8A3FFC"
+                                d="M49.6,-37.9C61.5,-24.5,66.6,-4.1,63.6,16.6C60.5,37.2,49.2,58,32.5,65.1C15.9,72.2,-6.2,65.5,-27.3,55.7C-48.4,46,-68.4,33.1,-75.1,14.2C-81.8,-4.8,-75.2,-29.7,-60.5,-43.7C-45.7,-57.7,-22.9,-60.8,-2,-59.2C18.8,-57.6,37.6,-51.3,49.6,-37.9Z"
+                                transform="translate(100 100)" />
+                            <image class="home__blob-img" xlink:href="assets/img/about.png" />
+                        </svg>
+
+                    </div>
+                    <div class="home__data">
+                        <h1 class="home__title">Hi, I'm Houssem </h1>
+                        <h3 class="home__subtitle"> Web Developer</h3>
+                        <p class="home__description">I was working as web developer for a year now.
+                            I enjoy coding and solve peoples problems. I’m quietly confident,
+                            naturally curious, and perpetually working on improving my skills.
+                            <a href="#contact" class="button button--flex">Contact Me <i
+                                    class="uil uil-message button__icon"></i></a>
+
+                        </p>
+                    </div>
+                </div>
+                <div class="home__scroll">
+                    <a href="#about" class="home_scroll-button button--flex"></a>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
     <!-- SWIPE JS -->
     <script src=""></script>
     <!-- JS -->
     <script src="assets/js/main.js"></script>
 </body>
+
 </html>
